--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@fontsource-variable/geist": "^5.2.8",
     "@fontsource-variable/geist-mono": "^5.2.7",
     "@hufe921/canvas-editor-plugin-docx": "^0.0.5",
+    "harfbuzzjs": "^0.8.0",
+    "opentype.js": "^1.3.4",
     "prismjs": "^1.27.0"
   },
   "simple-git-hooks": {
